--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 project_c_data.csv.zip filter=lfs diff=lfs merge=lfs -text
 tripdata.zip filter=lfs diff=lfs merge=lfs -text
+all_trips.csv.zip filter=lfs diff=lfs merge=lfs -text
